# persona-vectors

./: .gitignore  README.md  __init__.py  boardgame_qa.py  boardgameqa.csv  initial_11_13.py  output.txt  pyproject.toml  requirements.txt  scratch.py  todo.md
data_generation/: TraitGenerator.py  TraitPair.py  prompts.py
experiments/: scratch.csv
model_with_persona/: analytical_persona_initialization.json  creative_persona_initialization.json  empathetic_persona_initialization.json  kind_persona_initialization.json  optimistic_persona_initialization.json  pessimistic_persona_initialization.json  sarcastic_persona_initialization.json  verbose_persona_initialization.json
persona_dataset/: analytical_dataset.json  brave_dataset.json  cautious_dataset.json  creative_dataset.json  empathetic_dataset.json  kind_dataset.json  optimistic_dataset.json  pessimistic_dataset.json  sarcastic_dataset.json  verbose_dataset.json
persona_vector_generation/: ActivationExtractor.py  PersonaInference.py
persona_vector_generation/persona_vectors/: sarcastic_prompt_vector.npy  sarcastic_response_vector.npy
persona_vectors/: ModelWithPersona.py  PersonaDataset.py  __init__.py  prompts.py
persona_vectors/persona_dataset/: sarcastic_dataset.json
persona_vectors_v2/: Dataset.py  ModelWithPersona.ipynb  ModelWithPersona.py
