[project]
name = "persona-vectors"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.11.0",
    "datasets>=4.4.1",
    "matplotlib>=3.10.7",
    "ollama>=0.6.0",
    "openai>=2.8.0",
    "pandas>=2.3.3",
    "pathlib2>=2.3.7.post1",
    "seaborn>=0.13.2",
    "torch>=2.9.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.1",
]

[tool.setuptools.packages.find]
where = ["experiments", "persona_vectors"]
